# sukuk-screener

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py
app/routers/: api.py  pages.py
app/services/: db_ops.py  enrichment.py  ingest.py  pdf_parser.py  scheduler.py
app/templates/: _table_head.html  _table_rows.html  base.html  compare.html  detail.html  index.html
docs/: server-setup.md  sukuk_screener_prd.md
tests/: test_api.py  test_compare.py  test_database.py  test_enrichment.py  test_export.py  test_integration.py  test_pdf_parser.py  test_presets.py  test_scheduler.py
