[project]
name = "sukuk-screener"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "duckdb==1.2.1",
    "pdfplumber==0.11.4",
    "httpx==0.28.1",
    "apscheduler==3.11.0",
    "pytz==2024.2",
    "pandas==2.2.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]
